2012-08-28  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/ArithmeticException/classInfo/getDeclaredFields.java:
	* gnu/testlet/java/lang/ArithmeticException/classInfo/getMethods.java:
	Make these two tests compatible with JDK 1.7.

2012-08-27  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Double/compareToObject.java:
	Test of Double method compareTo(Object).
	* gnu/testlet/java/lang/Double/doubleToLongBits.java:
	Test of Double method doubleToLongBits(double).
	* gnu/testlet/java/lang/Double/doubleToRawLongBits.java:
	Test of Double method doubleToRawLongBits(double).
	* gnu/testlet/java/lang/Double/valueOfDouble.java:
	Test of Double method valueOf(double).

2012-08-20  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/AbstractMethodError/classInfo/getDeclaredFields.java:
	* gnu/testlet/java/lang/AbstractMethodError/classInfo/getMethods.java:
	Make these tests compatible with JDK 1.7.

2012-08-20  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Harness.java: fix - tests with specific command line options are
	now compiled separately, not in one group with other tests.
	* gnu/testlet/java/lang/TypeNotPresentException/TryCatch.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/InstanceOf.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/getInterfaces.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/getModifiers.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/getName.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/getPackage.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/getSimpleName.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/getSuperclass.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/isAssignableFrom.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/isInstance.java:
	* gnu/testlet/java/lang/TypeNotPresentException/classInfo/isInterface.java: